<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sumanth.knapsack_simulation.HomeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/values_count"
        android:background="@android:color/white"
        android:layout_margin="10dp"
        android:hint="@string/values_hint"
        android:padding="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weights_count"
        android:background="@android:color/white"
        android:layout_margin="10dp"
        android:hint="@string/weights_hint"
        android:padding="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/values_array"
        android:background="@android:color/white"
        android:layout_margin="10dp"
        android:hint="@string/values_array_hint"
        android:padding="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weights_array"
        android:layout_margin="10dp"
        android:background="@android:color/white"
        android:hint="@string/weights_array_hint"
        android:padding="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/max_weight"
        android:background="@android:color/white"
        android:hint="@string/max_weight_hint"
        android:padding="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:background="@color/colorPrimary"
        android:text="@string/submit"/>
    </LinearLayout>

</FrameLayout>
